--- a/projets/Stage_M2_Felipe/Stage_M2_Felipe.html
+++ b/projets/Stage_M2_Felipe/Stage_M2_Felipe.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Stage TopoAirtech</title> <!-- Nom sur l'onglet de navigation -->
+    <title>Site Alternance CNPF</title> <!-- Nom sur l'onglet de navigation -->
     <link rel="stylesheet" href="style_stage.css"> <!-- Compatibilité avec les styles du fichier CSS -->
     <link rel="preconnect" href="https://fonts.googleapis.com"> <!-- Style de police -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!-- Style de police -->
